# cinecutie

./: AUTHORS  ChangeLog  Makefile.am  README.BUILD  README.cinecutie_rpm  cinecutie-current.spec.in  configure.in  realclean  test.m2v
TODO.dir/: README
TODO.dir/diffpatch/: missingoncin4.txt  missingoncincv.txt
TODO.dir/stat-cinecutie/: 1unused.txt  2used.txt  3mergable.txt
TODO.dir/stat-guicast/: 1unused.txt  2mergable.txt  3used.txt
cinecutie/: CHANGELOG  CHANGELOG.1.1.9  Makefile.am  Makefile.in  aboutprefs.C  audioesound.C  automation.h  brender.C  dcraw.c  edl.C  ffmpeg.C  file.C  file.inc  filebase.C  filebase.h  fileffmpeg.C  fileflac.C  filemov.C  filemov.h  filempeg.C  fileogg.C  filepng.C  filepng.C.orig  main.C  mwindow.C  mwindow.inc  new.C  pluginclient.h  preferences.inc  preferencesthread.C  statusbar.C  timebomb.C  versioninfo.h
cinecutie/data/: Makefile.in  about_png.h  heroine_logo12_png.h
cinecutie/tests/: alpha.xml  alpha2.xml  audio_transition.xml  bandwipe.xml  chromakey_feather.xml  compressor.xml  denoise.xml  diffkey.xml  (+18 more)
debian/: changelog  cinecutie-optional.install  cinecutie.install  cinecutie.menu  cinecutie.postinst  cinecutie.sgml  cinecutie.substvars  control  libcinecutie-dev.install  libcinecutie.install  rules  switch-xt
doc/: ChangeLog  README_en  README_fr  README_pt  TRANSLATIONS  cinecutie_cv_manual_en.texi  cinecutie_cv_manual_fr.texi  cinecutie_cv_manual_pt_BR.texi  make_manuals.sh  make_wiki.sh
guicast/: Makefile.am  bcrecentlist.h  bcresources.C  bcresources.inc  bctextbox.C  bctextbox.h  bcwindowbase.C  bcwindowbase.h  bcwindowbase.inc  bcwindowdraw.C  debug.h  libguicast.la
image/: Makefile.am  cinecutie.desktop
libmpeg3/: Makefile.am  mpeg3css.c
mpeg2enc/: Makefile.am
mplexlo/: Makefile.am
plugins/: Makefile.am
plugins/shapewipe/: Makefile.am  picon_png.h  shapewipe.C
plugins/svg/: Makefile.am  cinecutie-rawc-convert.C  picon_png.h  svg.C  svg.h  svgwin.C  svgwin.h
plugins/themepink/: Makefile.am  Makefile.in  themepink.C  themepink.h
plugins/themepink/data/: Makefile.am  Makefile.in  fillpng.sh
png1.4patch/: filepng.C.patch  shapewipe.C.patch
po/: .gitignore  Makefile.in.in  Makevars  POTFILES.in  de.po  es.po  eu.po  fr.po  it.po  nb.po  pt_BR.po  ru.po  sl.po
quicktime/: Makefile.am  colormodels.c  colormodels.h  mpeg4.c  qdm2.c  qtffmpeg.c  qth264.c  qtmp3.c  wma.c
svgtopng/: License  bin2cinecutie_header  cinecutie.sh
(+652 files in other folders)
